[gd_scene load_steps=12 format=3 uid="uid://dh1i54sipwrfa"]

[ext_resource type="Script" path="res://Game/Goals/Goal.gd" id="1_oti5e"]
[ext_resource type="Texture2D" uid="uid://b4w71h4mnqxj4" path="res://Assets/Icons/WormIcon.png" id="2_yola8"]
[ext_resource type="Texture2D" uid="uid://byer483bjls8g" path="res://Assets/Backgrounds/DeleteGoal.png" id="3_324hd"]
[ext_resource type="PackedScene" uid="uid://cyi0hrshfraqh" path="res://filter_detection.tscn" id="4_p7d1o"]

[sub_resource type="Theme" id="Theme_tgcbt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7oq4f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wqjpa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fb7pa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wb6tm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c7kh2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xyeye"]

[node name="Goal" type="Control"]
custom_minimum_size = Vector2(2.08165e-12, 150)
layout_mode = 3
anchors_preset = 0
offset_right = 601.0
offset_bottom = 169.0
theme = SubResource("Theme_tgcbt")
script = ExtResource("1_oti5e")

[node name="Component_Container" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(590, 2.08165e-12)
layout_mode = 1
offset_left = 6.0
offset_right = 596.0
offset_bottom = 122.0
theme_override_constants/separation = 7

[node name="Goal_TextEdit" type="TextEdit" parent="Component_Container"]
custom_minimum_size = Vector2(500, 35)
layout_mode = 2
size_flags_horizontal = 0
placeholder_text = "Study Goal"
wrap_mode = 1

[node name="Target_Hours" type="Label" parent="Component_Container"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Target: "

[node name="Complete_Hours" type="Label" parent="Component_Container"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Complete: "

[node name="Progress" type="CenterContainer" parent="Component_Container"]
layout_mode = 2

[node name="Progress_Bar" type="ProgressBar" parent="Component_Container/Progress"]
custom_minimum_size = Vector2(500, 20)
layout_mode = 2
size_flags_horizontal = 0
max_value = 1.0
show_percentage = false

[node name="Save_Goal_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 548.0
offset_top = 34.0
offset_right = 592.0
offset_bottom = 65.0
text = "Save"

[node name="Delete_Goal_Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -28.0
offset_right = -10.0
offset_bottom = 31.0
grow_horizontal = 0
text = "X"

[node name="Reward" type="Button" parent="."]
layout_mode = 0
offset_left = 524.0
offset_top = 68.0
offset_right = 594.0
offset_bottom = 99.0
disabled = true
alignment = 0

[node name="Icon" type="TextureRect" parent="Reward"]
layout_mode = 0
offset_left = 43.0
offset_top = 3.0
offset_right = 68.0
offset_bottom = 29.0
texture = ExtResource("2_yola8")
expand_mode = 1

[node name="Confirm_Delete" type="TextureRect" parent="."]
visible = false
layout_mode = 1
offset_left = 148.0
offset_top = -9.0
offset_right = 387.0
offset_bottom = 152.0
texture = ExtResource("3_324hd")
expand_mode = 1

[node name="Cancel" type="Button" parent="Confirm_Delete"]
layout_mode = 0
offset_left = 25.0
offset_top = 82.0
offset_right = 85.0
offset_bottom = 105.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_7oq4f")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wqjpa")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fb7pa")

[node name="Confirm" type="Button" parent="Confirm_Delete"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -99.0
offset_top = -79.0
offset_right = -28.0
offset_bottom = -53.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_wb6tm")
theme_override_styles/hover = SubResource("StyleBoxEmpty_c7kh2")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_xyeye")

[node name="Filter_Detection" parent="." instance=ExtResource("4_p7d1o")]
visible = false
offset_left = 283.0
offset_top = -96.0
offset_right = 283.0
offset_bottom = -96.0

[connection signal="text_changed" from="Component_Container/Goal_TextEdit" to="." method="_on_goal_text_edit_text_changed"]
[connection signal="pressed" from="Save_Goal_Button" to="." method="_on_save_goal_button_pressed"]
[connection signal="pressed" from="Delete_Goal_Button" to="." method="_on_delete_goal_button_pressed"]
[connection signal="pressed" from="Reward" to="." method="_on_reward_pressed"]
[connection signal="pressed" from="Confirm_Delete/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Confirm_Delete/Confirm" to="." method="_on_confirm_pressed"]
